--- a/reference/imonitor-api.v1.yaml
+++ b/reference/imonitor-api.v1.yaml
@@ -35,6 +35,16 @@ paths:
                   - refreshToken
                   - tokenType
                   - userInfo
+              examples:
+                example-1:
+                  value:
+                    accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    refreshToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    tokenType: Bearer
+                    userInfo:
+                      id: 1
+                      name: 홍길동
+                      major: 수학과
         '404':
           description: |-
             Not Found
@@ -48,6 +58,10 @@ paths:
                     type: string
                 required:
                   - message
+              examples:
+                example-1:
+                  value:
+                    message: User Not Found
       description: 로그인 하는 API
       parameters: []
       tags:
@@ -82,6 +96,16 @@ paths:
                   - refreshToken
                   - tokenType
                   - userInfo
+              examples:
+                example-1:
+                  value:
+                    accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    refreshToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    tokenType: Bearer
+                    userInfo:
+                      id: 1
+                      name: 홍길동
+                      major: 수학과
         '401':
           description: |-
             Unauthorized
@@ -93,6 +117,10 @@ paths:
                 properties:
                   message:
                     type: string
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
         '403':
           description: |-
             Forbidden
@@ -104,6 +132,10 @@ paths:
                 properties:
                   message:
                     type: string
+              examples:
+                example-1:
+                  value:
+                    message: Forbidden Error
       operationId: get-auth-refresh-token
       description: 'accessToken이 만료됐을 때 사용합니다 '
       parameters:
@@ -128,6 +160,44 @@ paths:
                 properties:
                   exam:
                     $ref: '#/components/schemas/DetailedExamInfo'
+              examples:
+                example-1:
+                  value:
+                    exam:
+                      id: 2
+                      title: 선형대수 중간고사
+                      notice: 온라인 시험입니다
+                      courseName: 선형대수
+                      courseCode: '20202020'
+                      startTime: '2020-08-11T08:00:00'
+                      endTime: '2020-08-11T10:00:00'
+                      owner:
+                        id: 1
+                        name: 홍길동
+                        major: 수학과
+                      questions:
+                        - id: 1
+                          question: 문제1
+                          type: CHOICE
+                          choices:
+                            - id: 1
+                              content: 답1
+                              order: 1
+                            - id: 2
+                              content: 답2
+                              order: 2
+                            - id: 3
+                              content: 답3
+                              order: 3
+                            - id: 4
+                              content: 답4
+                              order: 4
+                            - id: 5
+                              content: 답5
+                              order: 5
+                        - id: 2
+                          question: 문제2
+                          type: SHORT_ANSWER
         '401':
           description: |-
             Unauthorized
@@ -136,6 +206,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
         '403':
           description: |-
             Forbidden
@@ -145,6 +219,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Forbidden Error
       description: 새로운 시험 등록
       parameters:
         - schema:
@@ -177,6 +255,78 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/SimplifiedExamInfo'
+              examples:
+                example-1:
+                  value:
+                    exams:
+                      - id: 1
+                        title: 해석학 중간고사
+                        notice: 오픈북 시험입니다
+                        courseName: 해석학
+                        courseCode: '20202020'
+                        startTime: '2020-08-11T08:00:00'
+                        endTime: '2020-08-11T10:00:00'
+                        owner:
+                          id: 1
+                          name: 홍길동
+                          major: 수학과
+                        questions:
+                          - id: 1
+                            question: 문제1
+                            type: CHOICE
+                            choices:
+                              - id: 1
+                                content: 답1
+                                order: 1
+                              - id: 2
+                                content: 답2
+                                order: 2
+                              - id: 3
+                                content: 답3
+                                order: 3
+                              - id: 4
+                                content: 답4
+                                order: 4
+                              - id: 5
+                                content: 답5
+                                order: 5
+                          - id: 2
+                            question: 문제2
+                            type: SHORT_ANSWER
+                      - id: 2
+                        title: 선형대수 중간고사
+                        notice: 온라인 시험입니다
+                        courseName: 선형대수
+                        courseCode: '20202020'
+                        startTime: '2020-08-11T08:00:00'
+                        endTime: '2020-08-11T10:00:00'
+                        owner:
+                          id: 1
+                          name: 홍길동
+                          major: 수학과
+                        questions:
+                          - id: 1
+                            question: 문제1
+                            type: CHOICE
+                            choices:
+                              - id: 1
+                                content: 답1
+                                order: 1
+                              - id: 2
+                                content: 답2
+                                order: 2
+                              - id: 3
+                                content: 답3
+                                order: 3
+                              - id: 4
+                                content: 답4
+                                order: 4
+                              - id: 5
+                                content: 답5
+                                order: 5
+                          - id: 2
+                            question: 문제2
+                            type: SHORT_ANSWER
         '401':
           description: |-
             Unauthorized
@@ -185,6 +335,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
       description: 시험 목록 조회
       parameters:
         - schema:
@@ -242,6 +396,44 @@ paths:
                 properties:
                   exam:
                     $ref: '#/components/schemas/DetailedExamInfo'
+              examples:
+                example-1:
+                  value:
+                    exam:
+                      id: 2
+                      title: 선형대수 중간고사
+                      notice: 온라인 시험입니다
+                      courseName: 선형대수
+                      courseCode: '20202020'
+                      startTime: '2020-08-11T08:00:00'
+                      endTime: '2020-08-11T10:00:00'
+                      owner:
+                        id: 1
+                        name: 홍길동
+                        major: 수학과
+                      questions:
+                        - id: 1
+                          question: 문제1
+                          type: CHOICE
+                          choices:
+                            - id: 1
+                              content: 답1
+                              order: 1
+                            - id: 2
+                              content: 답2
+                              order: 2
+                            - id: 3
+                              content: 답3
+                              order: 3
+                            - id: 4
+                              content: 답4
+                              order: 4
+                            - id: 5
+                              content: 답5
+                              order: 5
+                        - id: 2
+                          question: 문제2
+                          type: SHORT_ANSWER
         '401':
           description: |-
             Unauthorized
@@ -250,6 +442,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
         '403':
           description: |-
             Forbidden
@@ -258,6 +454,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Forbbiden Error
       operationId: get-exams-examId
       description: 특정 시험 정보 조회
       parameters:
@@ -293,6 +493,16 @@ paths:
                   - refreshToken
                   - userInfo
                   - tokenType
+              examples:
+                example-1:
+                  value:
+                    accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    refreshToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImV4cCI6MTY4MzcwMzg0NDU2N30.AuImY9eFPG22Yl6UCen9_b70HS-KqFDztx76Bkgyf44
+                    tokenType: Bearer
+                    userInfo:
+                      id: 1
+                      name: 홍길동
+                      major: 수학과
       description: 회원가입
       requestBody:
         content:
@@ -325,6 +535,40 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/SubmitResultInfo'
+              examples:
+                example-1:
+                  value:
+                    result:
+                      - qna:
+                          id: 1
+                          question: 문제1
+                          answer: 답1
+                          type: SHORT_ANSWER
+                        submittedAnwer: 답1
+                        isCorrect: true
+                      - qna:
+                          id: 2
+                          question: 문제2
+                          answer: '3'
+                          type: CHOICE
+                          choices:
+                            - id: 1
+                              content: 답1
+                              order: 1
+                            - id: 2
+                              content: 답2
+                              order: 2
+                            - id: 3
+                              content: 답3
+                              order: 3
+                            - id: 4
+                              content: 답4
+                              order: 4
+                            - id: 5
+                              content: 답5
+                              order: 5
+                          submittedAnswer: '2'
+                          isCorrect: 'false'
         '401':
           description: |-
             Unauthorized
@@ -333,6 +577,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
         '403':
           description: |-
             Forbidden
@@ -341,6 +589,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Forbidden Error
       description: 시험 제출
       parameters:
         - schema:
@@ -391,6 +643,40 @@ paths:
                       $ref: '#/components/schemas/SubmitResultInfo'
                 required:
                   - result
+              examples:
+                example-1:
+                  value:
+                    result:
+                      - qna:
+                          id: 1
+                          question: 문제1
+                          answer: 답1
+                          type: SHORT_ANSWER
+                        submittedAnwer: 답1
+                        isCorrect: true
+                      - qna:
+                          id: 2
+                          question: 문제2
+                          answer: '3'
+                          type: CHOICE
+                          choices:
+                            - id: 1
+                              content: 답1
+                              order: 1
+                            - id: 2
+                              content: 답2
+                              order: 2
+                            - id: 3
+                              content: 답3
+                              order: 3
+                            - id: 4
+                              content: 답4
+                              order: 4
+                            - id: 5
+                              content: 답5
+                              order: 5
+                          submittedAnswer: '2'
+                          isCorrect: 'false'
         '401':
           description: |-
             Unauthorized
@@ -399,12 +685,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Unauthorized Error
         '403':
           description: "Forbidden\n내가 제출한 시험 결과만 조회할 수 있음 "
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                example-1:
+                  value:
+                    message: Forbidden Error
       operationId: get-users-userId-exams-examId-submit
       description: 시험 결과 조회
       parameters:
@@ -625,26 +919,15 @@ components:
       properties:
         qna:
           $ref: '#/components/schemas/QnaInfo'
-        submit:
-          $ref: '#/components/schemas/SubmitInfo'
+        submittedAnswer:
+          type: string
         isCorrect:
           type: boolean
           description: 정답 여부
       required:
         - qna
-        - submit
-        - isCorrect
-    SubmitInfo:
-      title: SubmitInfo
-      type: object
-      properties:
-        question:
-          type: string
-        submittedAnswer:
-          type: string
-      required:
-        - question
         - submittedAnswer
+        - isCorrect
     QnaInfo:
       title: QnaInfo
       type: object
