--- a/reference/imonitor-api.v1.yaml
+++ b/reference/imonitor-api.v1.yaml
@@ -1023,6 +1023,8 @@ paths:
           description: acccess token
           required: true
       description: ''
+      tags:
+        - exam
 components:
   schemas:
     UserInfo:
